Fix Competition Data Upload as Pdf PIG-31